--- a/paris.html
+++ b/paris.html
@@ -8,7 +8,7 @@
 <body>
 
   <header>
-    <h1>Paris, France 🇫🇷</h1>
+    <h1>Paris, France</h1>
     <a href="index.html">← Back to Home</a>
   </header>
 
